Fix background-image cropping/repeating bug

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root {
+  background-attachment: fixed;
   background-image: url('desk.jpeg');
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -35,15 +37,18 @@
 
 button {
   background-color: #f7f7f7;
-  background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0, 0, 0, .04));
+  background-image: linear-gradient(to bottom, transparent, transparent 50%, rgb(0, 0, 0, .04));
   border: 1px solid #c4c4c4;
   border-radius: 3px;
-  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
+  box-shadow: inset 0 0 0 1px rgb(255, 255, 255, .05),
+              inset 0 1px 0 0 rgb(255, 255, 255, .45),
+              inset 0 -1px 0 0 rgb(255, 255, 255, .15),
+              0 1px 0 0 rgb(255, 255, 255, .15);
   color: #333;
   font-size: 1.25rem;
   height: 60px;
   opacity: .8;
-  text-shadow: 0 1px rgba(255, 255, 255, .4);
+  text-shadow: 0 1px rgb(255, 255, 255, .4);
 }
 
 button:hover {
